--- a/rest/Makefile
+++ b/rest/Makefile
@@ -1,4 +1,4 @@
-OW_GOLANG=msciab/actionloop-golang-v1.11:1540726346
+OW_GOLANG=openwhisk/actionloop-golang-v1.11
 
 golang.done:
 	wsk package update golang \
@@ -8,9 +8,10 @@ utils2.done:
 	wsk package bind /whisk.system/utils utils2 \
 	&& touch utils2.done
 
-trigger.done:
-	-wsk trigger create golang-trigger
-	wsk rule update golang-trigger-date golang-trigger utils2/date
+trigger.done: utils2.done
+	wsk trigger create golang-trigger
+	wsk rule update golang-trigger-sort golang-trigger utils2/sort
+	wsk rule enable golang-trigger-sort
 	touch trigger.done
 
 invokesort: golang.done utils2.done
@@ -21,13 +22,26 @@ invokesort-test: invokesort
 	wsk action invoke golang/invokesort -p message "Sorted: " -p text beta,alpha,gamma -r
 
 triggersort.zip: invokesort.go triggersort.go
-	zip firetrigger.zip invokesort.go triggersort.go
+	zip triggersort.zip invokesort.go triggersort.go
 
 triggersort: golang.done utils2.done trigger.done triggersort.zip 
-	wsk action update golang/triggersort firetrigger.zip  --main fire -p trigger "golang-trigger"  --docker $(OW_GOLANG)
+	wsk action update golang/triggersort triggersort.zip  --main fire \
+	-p trigger "golang-trigger"  \
+	-p retrieve "golang/triggersort" \
+	--docker $(OW_GOLANG)
 
-#triggersort-test: firetrigger
-#	wsk action invoke golang/firetrigger -p message "Date is" -r
+triggersort-test: triggersort
+	wsk action invoke golang/triggersort -p text "sort,me,out,please" -r
 
 test: golang.done utils2.done trigger.done
 	#go test
+
+clean:
+	-wsk action delete golang/invokesort
+	-wsk action delete golang/triggersort
+	-wsk package delete utils2
+	-wsk trigger delete golang-trigger
+	-wsk rule delete golang-trigger-sort
+	-rm utils2.done trigger.done
+	-rm *.zip
+	
